--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [main]
-server_protocol=http
-server_url=http://gorod24.test
-server_name=gorod24.test
+server_protocol=https
+server_url=https://gorod24.online
+server_name=gorod24.online
 template=gorod24
 template_extension=tpl
 [MYSQL]
