--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [main]
 server_protocol=http
-server_url=http://gorod24.test/
+server_url=http://gorod24.test
 server_name=gorod24.test
 template=gorod24_dev
 template_extension=tpl
